Added a reference to segnet

--- a/Autocoder_mnist.ipynb
+++ b/Autocoder_mnist.ipynb
@@ -291,7 +291,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Following code creates the model for network. \n",
+        "Following code creates the model for network. The model is inspired by
+        https://github.com/tensorflow/models/blob/master/samples/outreach/blogs/segmentation_blogpost/image_segmentation.ipynb \n",
         "Import all the necessary dependencies to make the model work. \n"
       ]
     },
